added navbar items to html

--- a/index.html
+++ b/index.html
@@ -14,8 +14,14 @@
   <header>
     <h1>Lernantino</h1>
     <nav>
+      <h3>About Me</h3>
+      <h3>Work</h3>
+      <h3>Contact Me </h3>
+      <h3>Resume</h3>
+
     </nav>
   </header>
+
 
   <!-- hero banner -->
   <section class="hero-banner">
@@ -24,21 +30,36 @@
     </div>
   </section>
 
-  <main class="page-wrapper">
+  <main class="container">
     <!-- about me -->
     <section class="page-section" id="about">
       <h2>About Me</h2>
     </section>
 
+    <section>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+        Voluptas, provident dolorum. Corrupti voluptas aliquam temporibus numquam quo,
+         laudantium unde amet quos obcaecati doloremque vitae eaque. Perspiciatis dolor ducimus 
+         veniam blanditiis.
+    </section>
     <!-- portfolio container -->
     <section class="page-section" id="work">
       <h2>Work</h2>
+    </section>
+
+    <section> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum similique iusto laborum, consectetur explicabo provident! Eius, perferendis? Nobis quia necessitatibus eligendi itaque, iste illum doloribus doloremque cumque. Blanditiis, cumque. Natus.
+
     </section>
 
     <!-- contact -->
     <section class="page-section contact" id="contact">
       <h2>Contact Me</h2>
     </section>
+
+    <section>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam eum, distinctio perspiciatis cumque sunt ipsa, alias harum architecto eos beatae tenetur libero! In voluptates eos corrupti consectetur debitis enim sint.
+        
+    </section>
+
+
   </main>
 </body>
 
